--- a/Dataset_&_DataLoader_in_Pytorch.ipynb
+++ b/Dataset_&_DataLoader_in_Pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpZ9MCvFLHdHm/gao8o3X3",
+      "authorship_tag": "ABX9TyNWcVlgSZEKkGfK/vlcAyNx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,12 +367,14 @@
     {
       "cell_type": "code",
       "source": [
-        "dataloader = DataLoader(dataset, batch_size=2, shuffle=False)"
+        "dataloader = DataLoader(dataset, batch_size=2, shuffle=False)\n",
+        "\n",
+        "#This shuffling is done by the sampler present nside dataloader"
       ],
       "metadata": {
         "id": "h8q_zbfNdVxo"
       },
-      "execution_count": 29,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -389,9 +391,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9pWabS4fd-iY",
-        "outputId": "ad7d4bbe-077d-44e7-b7de-f769aaa68c33"
+        "outputId": "9ae12a61-e773-47ae-f48a-4b886d8d8d4d"
       },
-      "execution_count": 30,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
