--- a/Dataset_&_DataLoader_in_Pytorch.ipynb
+++ b/Dataset_&_DataLoader_in_Pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWcVlgSZEKkGfK/vlcAyNx",
+      "authorship_tag": "ABX9TyO5HXFgTTtEH+B+qtwn8GTh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,12 +369,12 @@
       "source": [
         "dataloader = DataLoader(dataset, batch_size=2, shuffle=False)\n",
         "\n",
-        "#This shuffling is done by the sampler present nside dataloader"
+        "#This shuffling is done by the sampler present inside dataloader"
       ],
       "metadata": {
         "id": "h8q_zbfNdVxo"
       },
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -391,9 +391,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9pWabS4fd-iY",
-        "outputId": "9ae12a61-e773-47ae-f48a-4b886d8d8d4d"
+        "outputId": "fef72d9f-ad1f-4086-a5e3-14c7882e7cc9"
       },
-      "execution_count": 32,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
